const Map<String, List<String>> interests = {
  'Animals': [
    'Animals',
    'Bird Watching',
    'Birds',
    'Cats',
    'Dogs',
    'Exotic Pets',
    'Fish',
    'Pets'
  ],
  'Outdoors': [
    'Agriculture',
    'Camping',
    'Climbing',
    'Environment',
    'Forestry',
    'Hiking',
    'Nature',
    'Outdoors',
    'Scouting',
    'Survivalist'
  ],
  'Design': [
    'Advertising',
    'Architecture',
    'C.A.D.',
    'Computer Graphics',
    'Design',
    'Desktop Publishing',
    'Graphic Design',
    'Industrial Design',
    'Photoshop'
  ],
  'Fine Arts': [
    'Art History',
    'Arts',
    'Drawing',
    'Fine Arts',
    'Painting',
    'Photography',
    'Postmodernism',
    'Sculpting'
  ],
  'Performing Arts': [
    'Ballet',
    'Dancing',
    'Live Theatre',
    'Musicals',
    'Performing Arts'
  ],
  'Business and Careers': [
    'Business',
    'Career planning',
    'Consumer Info',
    'Entrepreneurship',
    'Home Business',
    'Management/HR',
    'Marketing'
  ],
  'Education': [
    'Continuing Education',
    'Education',
    'Homeschooling',
    'Library Resources',
    'Research',
    'Self Improvement',
    'University/College'
  ],
  'Finance': [
    'Accounting',
    'Banking',
    'Capitalism',
    'Daytrading',
    'Economics',
    'Financial planning',
    'Insurance',
    'Investing',
    'Mutual Funds',
    'Options/Futures',
    'Real Estate',
    'Taxation'
  ],
  'Crafts': [
    'Antiques',
    'Christmas',
    'Collecting',
    'Crafts',
    'Crochet',
    'Dolls/Puppets',
    'Knitting',
    'Memorabilia',
    'Quilting',
    'Scrapbooking',
    'Sewing',
    'Woodworking'
  ],
  'Fashion and Beauty': [
    'Bargains/Coupons',
    'Beauty',
    'Clothing',
    'Ecommerce',
    'Fashion',
    'Jewelry',
    'Shopping'
  ],
  'Genetics and Biology': [
    'Anatomy',
    'Biomechanics',
    'Biotech',
    'Cognitive Science',
    'Evolution',
    'Genetics',
    'Microbiology',
    'Neuroscience',
    'Pharmacology',
    'Physiology'
  ],
  'Health Conditions': [
    'AIDS',
    'Aging',
    'Arthritis',
    'Asthma',
    'Brain Disorders',
    'Cancer',
    'Diabetes',
    'Disabilities',
    'Eating Disorders',
    'Glaucoma',
    'Heart Conditions',
    'Learning Disorders',
    'Substance Abuse'
  ],
  'Health Solutions': [
    'Alternative Health',
    'Antiaging',
    'Dentistry',
    'Doctors/Surgeons',
    'Ergonomics',
    'Health',
    'Kinesiology',
    'Medical Science',
    'Mental Health',
    'Nursing',
    'Physical Therapy',
    'Psychiatry',
    'Psychology',
    'Sexual Health',
    'Weight Loss'
  ],
  'Alternative Culture': [
    'Alternative News',
    'Bisexual Culture',
    'Conspiracies',
    'Counterculture',
    'Crime',
    'Drugs',
    'Forensics',
    'Gay Culture',
    'Goth Culture',
    'Hedonism',
    'Lefthanded',
    'Lesbian Culture',
    'Paranormal',
    'Subculture',
    'Tattoos/Piercing'
  ],
  'History': [
    'American History',
    'Ancient History',
    'Anthropology',
    'Archaeology',
    'Classical Studies',
    'Cold War',
    'History',
    'Medieval History',
    'Philosophy'
  ],
  'World Culture': [
    'Africa',
    'African Americans',
    'Asia',
    'Australia',
    'Brazil',
    'Canada',
    'Caribbean',
    'Central America',
    'China',
    'Culture/Ethnicity',
    'Eastern Studies',
    'Europe',
    'France',
    'Geography',
    'Germany',
    'India',
    'Iraq',
    'Ireland',
    'Israel',
    'Italy',
    'Japan',
    'Korea',
    'Linguistics',
    'Mexico',
    'Middle East',
    'Native Americans',
    'Netherlands',
    'New York',
    'Oceania',
    'Russia',
    'South America',
    'Spain',
    'Terrorism',
    'UK',
    'USA'
  ],
  'Food and Beverages': [
    'Alcoholic Drinks',
    'Beer',
    'Beverages',
    'Cigars',
    'Coffee',
    'Food/Cooking',
    'Homebrewing',
    'Nutrition',
    'Restaurants',
    'Tea',
    'Vegetarian',
    'Wine'
  ],
  'Home and Garden': [
    'Botany',
    'Construction',
    'Gardening',
    'Home Improvement',
    'Homemaking',
    'Interior Design',
    'Landscaping',
    'Restoration'
  ],
  'Travel': ['Hotels', 'Luxury', 'Nightlife', 'Spas', 'Travel'],
  'Humor': ['Bizarre/Oddities', 'Cyberculture', 'Humor', 'Satire'],
  'Literature': [
    'American Lit.',
    'Biographies',
    'Books',
    'British Literature',
    "Children's Books",
    'Fantasy Books',
    'Humanities',
    'Journalism',
    'Literature',
    'Mystery Novels',
    'Poetry',
    'Quotes',
    'Romance Novels',
    'Shakespeare',
    'Writing'
  ],
  'Classical and World': [
    'Celtic Music',
    'Christian Music',
    'Classical Music',
    'Ethnic Music',
    'Gospel music',
    'Latin Music',
    'Lounge Music',
    'Opera',
    'Vocal Music'
  ],
  'Dance Music': [
    'Ambient Music',
    "DJ's/Mixing",
    'Dance Music',
    'Disco',
    "Drum'n'Bass",
    'Electronica/IDM',
    'House music',
    'Industrial Music',
    'Rave Culture',
    'Techno',
    'Trance',
    'TripHop/Downtempo'
  ],
  'Jazz and Blues': [
    'Blues music',
    'Funk',
    'Jazz',
    'Oldies Music',
    'Reggae',
    'Soul/R&B'
  ],
  'Popular Music': [
    'Country music',
    'HipHop/Rap',
    'Karaoke',
    'Music',
    'Pop music'
  ],
  'Rock Musics': [
    'Alternative Rock',
    'Britpop',
    'Classic Rock',
    'Folk music',
    'Heavy metal',
    'Indie Rock/Pop',
    'Punk Rock',
    'Rock music'
  ],
  'Songwriting': [
    'Guitar',
    'Music Composition',
    'Music Instruments',
    'Music Theory',
    'Musician Resources',
    'Percussion',
    'Radio Broadcasts',
    'Songwriting'
  ],
  'Activism and News': [
    'Activism',
    'Anarchism',
    'Communism',
    'Feminism',
    'Law',
    'Liberties/Rights',
    'Military',
    'News(General)',
    'Socialism',
    'Sociology'
  ],
  'Humanitarianism': [
    'Ethics',
    'Humanitarianism',
    "Int'l Development",
    'Nonprofit/Charity'
  ],
  'Politics': [
    'Conservative Politics',
    'Government',
    'Liberal Politics',
    'Political Science',
    'Politics'
  ],
  'Family': [
    'Babies',
    'Divorce',
    'Entertaining Guests',
    'Family',
    'For Kids',
    'Genealogy',
    'Kids',
    'Married Life',
    'Parenting',
    'Pregnancy/Birth',
    'Senior Citizens',
    'Teen Life',
    'Teen Parenting'
  ],
  'Relationships': [
    'Dating Tips',
    'Matchmaking',
    "Men's Issues",
    'Relationships',
    'Weddings',
    "Women's Issues"
  ],
  'Religion': [
    'Atheist/Agnostic',
    'Buddhism',
    'Catholic',
    'Christianity',
    'Hinduism',
    'Islam',
    'Judaism',
    'Mormon',
    'Orthodox',
    'Paganism',
    'Protestant',
    'Religion',
    'Scientology',
    'Sufism',
    'Sunni',
    'Wicca'
  ],
  'Spirituality': [
    'Astrology/Psychics',
    'Mythology',
    'New Age',
    'Spirituality'
  ],
  'Earth Sciences': [
    'Ecology',
    'Geoscience',
    'Marine Biology',
    'Meteorology',
    'Paleontology',
    'Zoology'
  ],
  'Energy': [
    'Alternative Energy',
    'Energy Industry',
    'Mining/Metallurgy',
    'Nuclear Science',
    'Petroleum'
  ],
  'Engineering': [
    'Chemical Eng.',
    'Civil Engineering',
    'Electrical Eng.',
    'Machinery',
    'Manufacturing',
    'Mechanical Eng.'
  ],
  'Mathematics': ['Chaos/Complexity', 'Logic', 'Mathematics', 'Statistics'],
  'Science': ['Biology', 'Chemistry', 'Physics', 'Science'],
  'Space': ['Astronomy', 'Space Exploration', 'UFOs'],
  'Cars and Transportation': [
    'Aviation/Aerospace',
    'Car Parts',
    'Cars',
    'Motor Sports',
    'Motorcycles',
    'Trains/Railroads',
    'Transportation',
    'Vintage Cars'
  ],
  'Extreme Sports': [
    'Extreme Sports',
    'Skateboarding',
    'Skiing',
    'Skydiving',
    'Snowboarding',
    'Surfing',
    'Water Sports',
    'Windsurfing'
  ],
  'Games': [
    'Billiards',
    'Board Games',
    'Card Games',
    'Chess',
    'Gambling',
    'Magic/Illusions',
    'Online Games',
    'Poker',
    'Puzzles',
    'Quizzes',
    'Roleplaying Games',
    'Toys',
    'Video Games'
  ],
  'Leisure Sports': [
    'Boating',
    'Bowling',
    'Canoeing/Kayaking',
    'Fishing',
    'Flyfishing',
    'Golf',
    'Guns',
    'Hunting',
    'Sailing',
    'Scuba Diving'
  ],
  'Sports': [
    'American Football',
    'Badminton',
    'Baseball',
    'Basketball',
    'Bicycling',
    'Bodybuilding',
    'Boxing',
    'Cheerleading',
    'Cricket',
    'Equestrian/Horses',
    'Figure Skating',
    'Fitness',
    'Gymnastics',
    'Hockey',
    'Martial Arts',
    'Racquetball',
    'Rodeo',
    'Rugby',
    'Running',
    'Soccer',
    'Sports(General)',
    'Squash',
    'Swimming',
    'Tennis',
    'Track/Field',
    'Volleyball',
    'Wrestling',
    'Yoga'
  ],
  'Animation': ['Animation', 'Anime', 'Cartoons', 'Comic Books', 'Multimedia'],
  'Television and Movies': [
    'Acting',
    'Action Movies',
    'Babes',
    'Celebrities',
    'Classic Films',
    'Comedy Movies',
    'Cult Films',
    'Drama Movies',
    'Film Noir',
    'Filmmaking',
    'Foreign Films',
    'Horror Movies',
    'Independent Film',
    'Movies',
    'Science Fiction',
    'Soap Operas',
    'Soundtracks',
    'Television'
  ],
  'AI and Robotics': [
    'A.I.',
    'Futurism',
    'Nanotech',
    'Robotics',
    'Semiconductors',
    'Supercomputing',
    'Virtual Reality'
  ],
  'Development': [
    'Computer Science',
    'Databases',
    'Embedded Systems',
    'Encryption',
    'Hacking',
    'Java',
    'Open Source',
    'PHP',
    'Perl',
    'Programming',
    'Shareware',
    'Software',
    'Web Development',
    'Windows Dev'
  ],
  'Gadgets': [
    'Amateur Radio',
    'Audio Equipment',
    'Cell Phones',
    'Electronic Devices',
    'Electronic Parts',
    'Gadgets',
    'Ipod',
    'Mobile Computing',
    'Peripheral Devices',
    'Photo Gear',
    'Recording Gear',
    'Technology',
    'Telecom',
    'Video Equipment'
  ],
  'Information Technology': [
    'Computer Hardware',
    'Computer Security',
    'Computers',
    'IT',
    'Linux/Unix',
    'MacOS',
    'Network Security',
    'Operating Systems',
    'Proxy',
    'Windows'
  ],
  'Miscellaneous': ['Sleeping', 'Sex']
};

final List<String> allInterestsList = List<String>.from(interests.values
    .reduce((interests1, interests2) => interests1 + interests2));
