...
                ),
              ),
              SizedBox(height: 20.0),
              SettingField(
                title: "Gender",
                child: RoundRadioGroup(
                  options: ["Male", "Female"],
                  selected: Gender.values.indexOf(user.gender),
                  onChanged: (option) => DatabaseService.setUserField(
                    uid,
                    "gender",
                    option,
                  ),
...
                onNextPage: _openNotificationSettings,
              ),
              SizedBox(height: 20.0),
              SettingField(
                title: "Theme",
                child: RoundRadioGroup(
                  options: ["Dark", "Light"],
                  selected: AppTheme.values
                      .indexOf(Provider.of<ThemeNotifier>(context).theme),
                  onChanged: (option) {
                    Provider.of<ThemeNotifier>(context)
                        .setTheme(AppTheme.values[option]);
                    DatabaseService.setUserField(uid, "theme", option);
...
